# MT5-Algorithmic-Trading

./: .gitignore  LICENCE  NOTES.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: MetaTrader5 Integration.ipynb
docs/strategies/: 1-perceptron.ipynb  2-MLPRegression.ipynb  3-MLPClassification.ipynb  simple_moving_average.ipynb  tests.ipynb
docs/strategies/4-Reinforcement Learning/: 4-Reinforcement Learning.ipynb  EnvironmentTrainingData.feather
src/: main.py
src/AlgorithmicTrading/account/: __init__.py  account.py
src/AlgorithmicTrading/backtest/: __init__.py  backtest.py
src/AlgorithmicTrading/backtest/environment/: canva.py  environment.py
src/AlgorithmicTrading/config/: config.py
src/AlgorithmicTrading/envs/metatrader/: .env
src/AlgorithmicTrading/models/: metatrader.py
src/AlgorithmicTrading/rates/: __init__.py  rates.py
src/AlgorithmicTrading/strategies/: perceptron.py  simple_moving_average.py
src/AlgorithmicTrading/strategies/base/: __init__.py  strategies.py
src/AlgorithmicTrading/ta/: support_and_resistance.py
src/AlgorithmicTrading/trade/: trade.py
src/AlgorithmicTrading/utils/: dates.py  exceptions.py  files.py  metatrader.py  trades.py
src/classes/: classes.py
src/strategies/: simple_moving_average.ipynb
src/utils/: trade.py
tests/test_models/: test_enum_values.py  test_functions.py  test_mt5_models.py
tests/test_trade/: test_trade.py
